--- a/src/main/resources/application-develop.yaml
+++ b/src/main/resources/application-develop.yaml
@@ -3,7 +3,7 @@ database:
     host: ${POSTGRES_HOST}
     port: ${POSTGRES_PORT}
     db: ${POSTGRES_DB}
-    schema: ${POSTGRES_DB}
+    schema: ${POSTGRES_SCHEMAS}
   credentials:
     username: ${POSTGRES_CREDENTIALS_USERNAME}
     password: ${POSTGRES_CREDENTIALS_PASSWORD}
